latest update 12 14 july 19

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,31 @@
 // Mixins Here
+.button(@backgound,@color){
+      @media @phone{
+            width:90%;
+            padding:3% 13%;
+            background-color: rgba(20, 22, 54, 0.884);
+            border-radius: 4%;
+           }
+      color:@color;
+      font-size: 18px;
+      text-align: center;
+      border: 1px solid black;
+      width:30%;
+      padding:4px 3px;
+      border-radius: 8%;
+      background-color:@backgound
+      
+     
+}
+
+
+    
+    .text {
+      font-size: 1.7rem;
+      color:black;
+
+    }
+    .bigtext{
+      font-size: 4rem;
+      margin-bottom: 3%;
+    }
