--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,7 @@
 // Home Content
 
 .home {
+  
 
   .intro {
 
@@ -18,12 +19,33 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    
+    .sky {
+      @media @phone{
+        display: none;
+      }
+    
+    }
+    .launch{
+      @media @phone{
+        display: none;
+      }
+
+    }
+  
+      
+    
 
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone{
+        width:100%;
+        
+      }
+      
     }
   }
 
@@ -45,12 +67,25 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
+    @media @phone{
+      flex-direction: column-reverse;
+      padding: 3%;
+    }
 
     .walk-text {
       width: 50%;
+      @media @phone{
+        width:100%
+      }
+      
 
       h3 {
         margin-bottom: 10px;
+        @media @phone{
+          margin-top: 2%;
+        }
+       
+
       }
 
       p {
@@ -58,17 +93,38 @@
       }
 
       .btn {
+        .button(black,white);
+       
+       
+        
+
+        
+
+         
+        
+        
+      }
+      .btn:hover{
+        background-color: aqua;
+        color: blue;
+
+        
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone{
+        width:100%;
+        margin-left: 0%;
+      }
       
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
+      
       }
     }
   }
