--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,35 @@
 // Navigation code here
+
+
+
+
+nav{
+     
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      h1{
+            .bigtext();
+      }
+      a {
+            text-decoration: none;
+            .text();
+           
+      }
+      
+      div{
+            width:60%;
+            margin-bottom: 2%;
+            display: flex;
+            justify-content: space-around;
+            @media @phone{
+                  width: 90%;
+            }
+            
+            
+
+                  
+            }
+      }
+     
